--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit
-langchain
-langchain-community
-langchain-openai
-langchain-google-genai
-chromadb
-python-dotenv
-tiktoken
-langchain-ollama
+streamlit==1.50.0
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-openai==0.3.35
+langchain-google-genai==2.1.12
+chromadb==1.3.7
+python-dotenv==1.2.1
+tiktoken==0.12.0
+langchain-ollama==0.3.10
+importlib-metadata==8.7.0
